--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SECRET_KEY= "My-secret-key"
 MONGO_URI= mongodb+srv://alanezequiel01:ibanezrg350@cluster0.qj87f.mongodb.net/MyTinerary?retryWrites=true&w=majority
+
+HOST = localhost
